--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Youtube Suma7 y Suma30</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script src="sketch.js"></script>
   <style>
     #ZonaArrastrable {
@@ -10,13 +15,23 @@
       font-size: 36px;
       width: 80%;
     }
+
+    canvas {
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      height: 200 px
+    }
   </style>
 </head>
 
 <body>
   <p id="ZonaArrastrable">
-  Arrastra tu archivo Totales.csv Aqui
+    Arrastra tu archivo Totales.csv Aqui
   </p>
+  <div style="height:200px">
+    <canvas id="MiGrafica"></canvas>
+  </div>
 </body>
 
 </html>
