Mejorando haspecto visual de la pagina y cambiando area de arrastrar

--- a/index.html
+++ b/index.html
@@ -1,37 +1,86 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Youtube Suma7 y Suma30</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-  <script src="sketch.js"></script>
-  <style>
-    #ZonaArrastrable {
-      padding: 24px;
-      border-style: dashed;
-      font-size: 36px;
-      width: 80%;
-    }
+  <!-- Font Awesone -->
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <!-- Materialize -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
 
-    canvas {
-      -moz-user-select: none;
-      -webkit-user-select: none;
-      -ms-user-select: none;
-      height: 200 px
-    }
-  </style>
+  <title>Analisis de Youtube a fondo</title>
 </head>
 
 <body>
-  <p id="ZonaArrastrable">
-    Arrastra tu archivo Totales.csv Aqui
-  </p>
-  <div style="height:200px">
-    <canvas id="MiGrafica"></canvas>
-  </div>
-</body>
 
-</html>
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper teal lighten-2">
+        <a href="https://alsw.net/" class="brand-logo">ALSW</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="sass.html">Ayuda</a></li>
+          <li><a href="badges.html">Donacion</a></li>
+          <li><a href="collapsible.html">Codigo</a></li>
+          <li><a href="collapsible.html">es</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  <!-- <div class="container"> -->
+    <div class="row">
+      <div class="col s12">
+        <div id="main" class="card">
+          <div class="card-content" id="ZonaArrastrable">
+            <span class="card-title">Analisis de Youtube a fondo</span>
+            <div class="row">
+              <canvas id="MiGrafica" height="700px">Your browser does not support the canvas element.</canvas>
+            </div>
+            <div class="row">
+              <p>Arrastra Totales.csv sobre el cuadro</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- </div> -->
+
+
+
+  <footer class="page-footer teal lighten-2">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Footer Content</h5>
+          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2020 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      </div>
+    </div>
+  </footer>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="sketch.js"></script>
+</body>
