--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper teal lighten-2">
-        <a href="https://alsw.net/" class="brand-logo">ALSW</a>
+        <a href="https://alsw.net/" class="brand-logo">FindingTube beta</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Ayuda</a></li>
           <li><a href="#">Donacion</a></li>
@@ -38,7 +38,7 @@
     <div class="col s12">
       <div id="main" class="card">
         <div class="card-content">
-          <span class="card-title center-align">Analisis de Youtube a fondo</span>
+          <span class="card-title center-align">Encuentra como va tu canal de Youtube a fondo</span>
           <p class="center-align">de ALSW</p>
         </div>
       </div>
