--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 </head>
 
 <body>
-
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper teal lighten-2">
-        <a href="https://alsw.net/" class="brand-logo">FindingTube beta</a>
+        <a class="brand-logo">FindingTube beta</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Ayuda</a></li>
           <li><a href="#">Donacion</a></li>
